[project]
name = "graham-rag-app"
version = "0.1.0"
description = "A RAG application built on top of grahams essays"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.8",
    "langchain>=0.3.18",
    "langchain-chroma>=0.2.1",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "unstructured>=0.16.20",
]

[tool.uv.workspace]
members = ["rag_app"]


[tool.poetry.dependencies]
uvicorn = "^0.17.0"
fastapi = "^0.75.0"
langchain_google_genai = "^0.0.5"